rebuild websockets for dish and his dictionaries